Closed Bug 787588 Opened 12 years ago Closed 12 years ago

IPC is still broken on DragonFly

Categories

(Core :: IPC, defect)

x86_64
Other
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla18

People

(Reporter: jbeich, Assigned: jbeich)

References

()

Details

Attachments

(1 file)

No description provided.
Not enough testing of bug 753046 bites me now. ipc/chromium/src/base/dir_reader_bsd.h:52:26: error: no member named 'd_reclen' in 'dirent' offset_ += dirent->d_reclen; ~~~~~~ ^ ino64 on different BSDs: http://gitweb.dragonflybsd.org/dragonfly.git/commitdiff/01f31ab https://github.com/jsonn/src/commit/7fc2e39 # netbsd https://github.com/glk/freebsd-ino64/commit/4dd4b16 # not landed yet
Attachment #657477 - Flags: review?(jones.chris.g)
Comment on attachment 657477 [details] [diff] [review] Bug 787588 - d_reclen is dead on DragonFly since 64bit inode support. The file is not used on non-BSDs. Trying Landry. Original PR is now closed after the following fix. http://cvsweb.netbsd.org/bsdweb.cgi/pkgsrc/devel/xulrunner/patches/patch-ipc_chromium_src_base_dir__reader__bsd.h.diff?r1=1.2&r2=1.3
Attachment #657477 - Flags: review?(jones.chris.g) → review?(landry)
Comment on attachment 657477 [details] [diff] [review] Bug 787588 - d_reclen is dead on DragonFly since 64bit inode support. If it builds for you...
Attachment #657477 - Flags: review?(landry) → review+
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla18
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: