Bug 787588 - d_reclen is dead on DragonFly since 64bit inode support. r=landry