ipc/chromium/src/base/dir_reader_bsd.h
@@ -49,7 +49,11 @@ class DirReaderBSD {
   bool Next() {
     if (size_) {
       struct dirent* dirent = reinterpret_cast<struct dirent*>(&buf_[offset_]);
+#ifdef OS_DRAGONFLY
+      offset_ += _DIRENT_DIRSIZ(dirent);
+#else
       offset_ += dirent->d_reclen;
+#endif
     }
 
     if (offset_ != size_)
